# OpenDeep

./: LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt
opendeep/: __init__.py  config.py  models.py  pow.py
