[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opendeep"
version = "0.1.0"
authors = [
  { name="cmpdchtr", email="cmpdchtr@gmail.com" },
]
description = "A free, unofficial client for the DeepSeek API with a Google Gemini-like syntax."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "curl_cffi",
    "wasmtime",
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/cmpdchtr/OpenDeep"
"Bug Tracker" = "https://github.com/cmpdchtr/OpenDeep/issues"
